# dev-platform

./: .env.development  .env.production  .env.test  .gitignore  config.production.json  index.html  mypy.ini  mypy.txt  pyproject.toml  sys.stdout  tree.txt  tree3.txt
docs/: Análise_22.docx  Análise_22.md  dashboard_25.html  exemplo.docx  exemplo.md  index.html  index.md
docs/análise_26/: análise_26.docx  análise_26.md  atualizado.html  info_26.html  infográfico.html  infográfico_26.html  onboarding_26.docx  onboarding_26.md
docs/análise_26/stake_file_26/: .gitignore  alembic.ini  composition_root.py  env copy.py  exceptions.py  interfaces.py  main.py  mkdocs.yml  ports.py  pyproject.toml  repositories.py  services.py  session.py  settings.json  tree.txt  use_cases.py  user_commands.py
docs/api/: domain.md
migrations/: env.py
scripts/: ___repositories.py  cria_pastas.ps1  cria_pastas_arquivo.ps1  del_folderes.ps1  mkdocs_comandos.md  stack_files.ps1  usecases.py
scripts/backup/: _2_pdf_generator.py  code-improvement.py  md2word.py
scripts/header/: alembic.ini  env.py  pyproject.toml
scripts/stake_file/: .gitignore  async_repositories.py  composition_root.py  config.py  container.py  dtos.py  entities.py  exceptions.py  interfaces.py  logging.py  main.py  models.py  ports.py  pyproject toml  services.py  session.py  structured_logger.py  unit_of_work.py  use_cases.py  usecases.py  user_cli.py  user_commands.py  value_objects.py
scripts/tools/: del_folderes.ps1  estrutura.txt  log_analyzer_mvp.py  md_to_word.py  pdf_generator.py  stack_files.ps1  tree.ps1  tree.txt
src/dev_platform/: main.py
src/dev_platform/application/ports/: logger.py
src/dev_platform/application/user/: async_usecases.py  dtos.py  ports.py  use_cases.py  usecases.py  usercases.py
src/dev_platform/domain/: models.py  ports.py
src/dev_platform/domain/user/: entities.py  exceptions.py  interfaces.py  services.py  validators.py  value_objects.py
src/dev_platform/infrastructure/: composition_root.py  config.py  container.py
src/dev_platform/infrastructure/database/: models.py  repositories.py  session.py  unit_of_work.py
src/dev_platform/infrastructure/logging/: structured_logger.py
src/dev_platform/interface/cli/: user_cli.py  user_commands.py
src/dev_platform/shared/: exceptions.py  logging.py
src/stake_file/: config.py  dtos.py  env.py  exceptions.py  interfaces.py  main.py  repositories.py  session.py
tests/: test_db.py
